finished modification