@@ -2,24 +2,37 @@ package OmGU.IMIT;
 
 import java.util.*;
 
+import static OmGU.IMIT.Matrix.multiply;
+
 public class Second {
     public static void main(String[] args) {
-        int[][] unitArray = {{1, 0, 0}, {0, 1, 0}, {0, 0, 1}};
-        Matrix matrix1;
-        Matrix matrix2;
-        Matrix unitMatrix = new Matrix(unitArray, 3);
+        List<Matrix> group = getGroup();
+
+        Map<Pair<Matrix, Matrix>, Map<Matrix, String>>
+                generatorsAndPaths = new HashMap<>();
+        List<Pair<Matrix, Matrix>> pairGenerators = new ArrayList<>();
+        findGenerators(group, generatorsAndPaths, pairGenerators);
+        Map<Pair<Pair<Matrix, Matrix>, Pair<Matrix, Matrix>>, List<List<Matrix>>> conjugatedMatrices =
+                findClassesConjugatedMatrices(group, pairGenerators, generatorsAndPaths);
+
+
+        for (Map.Entry<Pair<Pair<Matrix, Matrix>, Pair<Matrix, Matrix>>, List<List<Matrix>>> elem :
+                conjugatedMatrices.entrySet()) {
+
+            System.out.println("НОВЫЙ КЛАСС");
+            for (List<Matrix> set :
+                    elem.getValue()) {
+                System.out.println("Размер = " + set.size());
+            }
+        }
+
+    }
+
+    //нахожу группу невырожденных матриц 3*3 над полем (0, 1)
+    private static List<Matrix> getGroup() {
         Random rand = new Random();
         List<Matrix> group = new ArrayList<>();
-        boolean addElem = true;
 
-        Map<Pair, Map<Matrix, String>> generatorsAndPaths = new HashMap<>();
-        List<Matrix> secondOrderMatrix = new ArrayList<>();
-        List<Matrix> thirdOrderMatrix = new ArrayList<>();
-        List<Pair> pairGenerators = new ArrayList<>();
-        List<List<Matrix>> conjugatedMatrix = new ArrayList<>();
-        List<Matrix> otherMatrices = new ArrayList<Matrix>();
-
-        //нахожу группу невырожденных матриц 3*3 над полем (0, 1)
         while (group.size() != 168) {
             int[][] matrix = {{rand.nextInt(2), rand.nextInt(2), rand.nextInt(2)},
                     {rand.nextInt(2), rand.nextInt(2), rand.nextInt(2)},
@@ -29,6 +42,17 @@ public class Second {
                 group.add(other);
             }
         }
+        return group;
+    }
+
+    private static void findGenerators(
+            List<Matrix> group, Map<Pair<Matrix, Matrix>, Map<Matrix, String>> generatorsAndPaths,
+            List<Pair<Matrix, Matrix>> pairGenerators
+    ) {
+        List<Matrix> secondOrderMatrix = new ArrayList<>();
+        List<Matrix> thirdOrderMatrix = new ArrayList<>();
+        boolean addElem = true;
+
         //заполняю два множества элементов с порядками 2 и 3
         for (Matrix elem :
                 group) {
@@ -38,6 +62,7 @@ public class Second {
                 thirdOrderMatrix.add(elem);
             }
         }
+
         //нахождение пар порождающих элементов и их комбинации для получения всех элементов группы
         for (Matrix secondElem :
                 secondOrderMatrix) {
@@ -51,8 +76,8 @@ public class Second {
                     addElem = false;
                     for (Map.Entry<Matrix, String> mainElem :
                             pathsForAllMatrices.entrySet()) {
-                        matrix1 = Matrix.multiply(mainElem.getKey(), secondElem);
-                        matrix2 = Matrix.multiply(mainElem.getKey(), thirdElem);
+                        Matrix matrix1 = multiply(mainElem.getKey(), secondElem);
+                        Matrix matrix2 = multiply(mainElem.getKey(), thirdElem);
                         if (!copyOfPaths.containsKey(matrix1)) {
                             copyOfPaths.put(matrix1, mainElem.getValue() + "2");
                             addElem = true;
@@ -65,25 +90,34 @@ public class Second {
                     pathsForAllMatrices.putAll(copyOfPaths);
                 }
                 if (pathsForAllMatrices.size() == 168) {
-                    generatorsAndPaths.put(new Pair(secondElem, thirdElem), pathsForAllMatrices);
-                    pairGenerators.add(new Pair(secondElem, thirdElem));
+                    generatorsAndPaths.put(new Pair<>(secondElem, thirdElem), pathsForAllMatrices);
+                    pairGenerators.add(new Pair<>(secondElem, thirdElem));
                 }
                 addElem = true;
             }
         }
+    }
 
-        //нахождение классов скрученной сопряженности
-        Pair generate = pairGenerators.get(0);
-        System.out.println(generate.getFirst().toString() + generate.getSecond().toString());
-        for (Pair replace :
+    //нахождение классов скрученной сопряженности
+    private static Map<Pair<Pair<Matrix, Matrix>, Pair<Matrix, Matrix>>, List<List<Matrix>>> findClassesConjugatedMatrices(
+            List<Matrix> group, List<Pair<Matrix, Matrix>> pairGenerators, Map<Pair<Matrix, Matrix>, Map<Matrix, String>>
+            generatorsAndPaths
+    ) {
+        Map<Pair<Pair<Matrix, Matrix>, Pair<Matrix, Matrix>>, List<List<Matrix>>> conjugatedMatrices = new HashMap<>();
+        int[][] unitArray = {{1, 0, 0}, {0, 1, 0}, {0, 0, 1}};
+        Matrix unitMatrix = new Matrix(unitArray, 3);
+        List<Matrix> otherMatrices = new ArrayList<>();
+
+        Pair<Matrix, Matrix> generate = pairGenerators.get(0);
+        for (Pair<Matrix, Matrix> replace :
                 pairGenerators) {
             if (!generate.equals(replace)) {
                 int size = 0;
                 otherMatrices.addAll(group);
-                conjugatedMatrix.clear();
-                System.out.println(replace.getFirst().toString() + replace.getSecond().toString());
+                List<List<Matrix>> conjugatedMatrix = new ArrayList<>();
+
                 while (otherMatrices.size() != 0) {
-                    matrix1 = otherMatrices.get(0);
+                    Matrix matrix1 = otherMatrices.get(0);
                     conjugatedMatrix.add(size, new ArrayList<Matrix>());
 
                     for (Matrix h :
@@ -94,14 +128,14 @@ public class Second {
                         Matrix conversion = unitMatrix;
                         for (int i = 0; i < path.length(); i++) {
                             if (path.charAt(i) == '2') {
-                                conversion = Matrix.multiply(conversion, generate.getFirst());
+                                conversion = multiply(conversion, generate.getFirst());
                             } else {
-                                conversion = Matrix.multiply(conversion, generate.getSecond());
+                                conversion = multiply(conversion, generate.getSecond());
                             }
                         }
 
                         //ищем сопряженные элементы
-                        Matrix newMatrix = Matrix.multiply(Matrix.multiply(conversion, matrix1), h.inversion());
+                        Matrix newMatrix = multiply(multiply(conversion, matrix1), h.inversion());
                         if (!conjugatedMatrix.get(size).contains(newMatrix)) {
                             conjugatedMatrix.get(size).add(newMatrix);
                         }
@@ -114,13 +148,11 @@ public class Second {
                     size++;
                 }
 
-                for (List<Matrix> h :
-                        conjugatedMatrix) {
-                    System.out.println("Размер = " + h.size());
-                }
+                conjugatedMatrices.put(new Pair<>(generate, replace), conjugatedMatrix);
+
+
             }
         }
-
-
+        return conjugatedMatrices;
     }
 }
